# rustdoc-frontend

./: Cargo.toml  LICENSE-MIT  README.md
src/: lib.rs  main.rs
static/: main.js  styles.css
templates/: item.hbs
