[package]
name = "rustdoc-frontend"
version = "0.1.0"
authors = ["Andy Russell <arussell123@gmail.com>"]

[dependencies]
clap = "2"
handlebars = "0.29"
jsonapi = "0.5"
log = "0.3"
pretty_env_logger = "0.1"
pulldown-cmark = { version = "0.1.0", default-features = false }
serde = "1"
serde_json = "1"
pathdiff = "0.1"
