[package]
name = "rustdoc-static"
version = "0.1.0"
authors = ["Andy Russell <arussell123@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
clap = "2"
error-chain = "0.11"
handlebars = "0.29"
jsonapi = "0.5"
log = "0.3"
pathdiff = "0.1"
pretty_env_logger = "0.1"
pulldown-cmark = { version = "0.1.0", default-features = false }
serde = "1"
serde_json = "1"
